# anioku-platform

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  command.txt  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 465dddbbd0a9_add_core_models.py
backend/app/: main.py
backend/app/ai/: __init__.py  context.py  gateway.py  indexer.py  orchestrator.py  tools.py
backend/app/ai/agents/: __init__.py  architect.py  backend_agent.py  base.py  database.py  devops.py  docs.py  (+5 more)
backend/app/api/: __init__.py  agents.py  ai.py  auth.py  deploy.py  files.py  git.py  projects.py  search.py  terminal.py  workspaces.py
backend/app/core/: config.py  deps.py  security.py
backend/app/models/: __init__.py  agent_run.py  base.py  conversation.py  deployment.py  enums.py  file.py  memory.py  message.py  project.py  project_file.py  user.py  workspace.py  workspace_member.py
backend/app/realtime/: __init__.py  presence.py  rooms.py  server.py  sync.py
backend/app/runtime/: __init__.py  docker_manager.py  preview.py  terminal.py
backend/app/schemas/: __init__.py  agent_run.py  auth.py  common.py  conversation.py  deployment.py  file.py  memory.py  project.py  user.py  workspace.py
backend/app/services/: __init__.py  auth_service.py  deploy_service.py  file_service.py  git_service.py  project_service.py  workspace_service.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/tests/: conftest.py  test_auth.py  test_files.py  test_health.py  test_workspace_permissions.py
(+79 files in other folders)
