[project]
name = "anku-backend"
version = "0.1.0"
description = "ANKU backend: FastAPI + socket.io API, AI orchestration, and Docker runtime management."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-socketio>=5.11",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.2.5",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt>=2.8",
    "passlib[bcrypt]>=1.7",
    # passlib 1.7.4's bcrypt backend probes `bcrypt.__about__.__version__`, which
    # was removed in bcrypt 4.1 — pin below that until passlib releases a fix.
    "bcrypt>=4.0.1,<4.1",
    "email-validator>=2.0",
    "gitpython>=3.1",
    "docker>=7.1",
    "celery>=5.4",
    "redis>=5.0",
    "litellm>=1.40",
    "langgraph>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
